--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "author": "Aleksei Verkholantcev <poshli.pismo@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "debug": "^3.1.0",
+        "flow-bin": "^0.68.0",
+        "flow-copy-source": "^1.3.0",
         "lodash": "^4.17.5",
         "spawndamnit": "^1.0.0"
     },
@@ -14,11 +17,13 @@
         "babel-eslint": "^8.2.2",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
+        "babel-preset-flow": "^6.23.0",
         "eslint": "^4.19.1",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-flowtype": "^2.46.1",
         "eslint-plugin-prettier": "^2.6.0",
         "jest": "^22.4.3",
-        "prettier": "^1.11.1"
+        "prettier": "^1.11.1",
+        "rimraf": "^2.6.2"
     }
 }
