--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
         "jest": "^22.4.3",
         "prettier": "^1.11.1",
         "rimraf": "^2.6.2"
+    },
+    "scripts": {
+        "test": "jest"
     }
 }
