--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "url": "git://github.com/verkholantsev/better-git.git"
     },
     "dependencies": {
+        "coveralls": "^3.0.0",
         "debug": "^3.1.0",
         "flow-bin": "^0.68.0",
         "flow-copy-source": "^1.3.0",
@@ -31,6 +32,11 @@
         "rimraf": "^2.6.2"
     },
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "format": "eslint --fix . && prettier --write **/*.{md,json,js}",
+        "lint": "eslint ./**/*.js",
+        "flow": "flow .",
+        "pre-commit": "yarn run lint && yarn run flow",
+        "publish:coverage": "jest --coverage && cat coverage/lcov.info | coveralls"
     }
 }
