--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "flow-bin": "^0.68.0",
         "flow-copy-source": "^1.3.0",
         "lodash": "^4.17.5",
-        "spawndamnit": "^1.0.0"
+        "spawndamnit": "^1.0.0",
+        "util.promisify": "^1.0.0"
     },
     "devDependencies": {
         "babel": "^6.23.0",
