--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ node_js:
   - 8
 
 script:
-  - yarn run lint
-  - yarn run flow
-  - yarn test
+  - yarn lint
+  - yarn flow
+  - yarn test --coverage
 
 after_script:
     - yarn run publish:coverage
