Add `babel-polyfill` to pkg.jest.setupFiles

--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
         "flow": "flow .",
         "pre-commit": "yarn run lint && yarn run flow",
         "publish:coverage": "cat coverage/lcov.info | coveralls"
+    },
+    "jest": {
+        "setupFiles": [
+            "<rootDir>/node_modules/babel-polyfill"
+        ]
     }
 }
