Add `<rootDir>/dist/` to jest coverage ignore patterns

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "node": ">=6"
     },
     "jest": {
-        "setupFiles": ["<rootDir>/node_modules/babel-polyfill"]
+        "setupFiles": ["<rootDir>/node_modules/babel-polyfill"],
+        "coveragePathIgnorePatterns": ["/node_modules/", "<rootDir>/dist/"]
     }
 }
