--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.2",
         "babel-plugin-external-helpers": "^6.22.0",
+        "babel-plugin-transform-es2017-object-entries": "^0.0.4",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
         "babel-preset-flow": "^6.23.0",
