Apply `yarn format`

--- a/package.json
+++ b/package.json
@@ -49,9 +49,6 @@
         "node": ">=6"
     },
     "jest": {
-        "coveragePathIgnorePatterns": [
-            "/node_modules/",
-            "<rootDir>/dist/"
-        ]
+        "coveragePathIgnorePatterns": ["/node_modules/", "<rootDir>/dist/"]
     }
 }
