--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
         "url": "git://github.com/verkholantsev/better-git.git"
     },
     "dependencies": {
-        "coveralls": "^3.0.0",
-        "debug": "^3.1.0",
-        "flow-bin": "^0.69.0",
-        "flow-copy-source": "^1.3.0",
         "lodash": "^4.17.5",
         "spawndamnit": "^1.0.0",
         "util.promisify": "^1.0.0"
@@ -24,10 +20,15 @@
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-preset-env": "^1.6.1",
         "babel-preset-flow": "^6.23.0",
+        "captain-git-hook": "^2.0.0",
+        "coveralls": "^3.0.0",
+        "debug": "^3.1.0",
         "eslint": "^4.19.1",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-flowtype": "^2.46.1",
         "eslint-plugin-prettier": "^2.6.0",
+        "flow-bin": "^0.69.0",
+        "flow-copy-source": "^1.3.0",
         "jest": "^22.4.3",
         "prettier": "^1.11.1",
         "rimraf": "^2.6.2",
