--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "url": "git://github.com/verkholantsev/better-git.git"
     },
     "dependencies": {
+        "import-js": "^2.10.1",
         "lodash": "^4.17.5",
         "spawndamnit": "^1.0.0",
         "util.promisify": "^1.0.0"
