--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "eslint-plugin-prettier": "^2.6.0",
         "flow-bin": "^0.70.0",
         "flow-copy-source": "^1.3.0",
+        "flow-typed": "^2.4.0",
         "jest": "^22.4.3",
         "prettier": "^1.12.1",
         "rimraf": "^2.6.2",
