--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ environment:
         - nodejs_version: "9"
 
 install:
+    - ps: echo 1
     - ps: Install-Product node $env:nodejs_version
     - ps: yarn
 
