--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,12 +7,12 @@ environment:
 
 install:
     - ps: Install-Product node $env:nodejs_version
-    - ps: yarn
+    - yarn
 
 build_script:
-    - ps: yarn build
+    - yarn build
 
 test_script:
-    - ps: yarn lint
-    - ps: yarn flow
-    - ps: yarn test
+    - yarn lint
+    - yarn flow
+    - yarn test
