--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,9 @@ environment:
         - nodejs_version: "8"
         - nodejs_version: "9"
 
+
+platform: x64
+
 install:
     - ps: Install-Product node $env:nodejs_version
     - yarn
