--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "flow-copy-source": "^1.3.0",
         "flow-typed": "^2.4.0",
         "jest": "^23.0.1",
+        "np": "^3.0.1",
         "prettier": "^1.13.0",
         "rimraf": "^2.6.2",
         "rollup": "^0.59.4",
@@ -51,7 +52,10 @@
         "node": ">=6"
     },
     "jest": {
-        "coveragePathIgnorePatterns": ["/node_modules/", "<rootDir>/dist/"],
+        "coveragePathIgnorePatterns": [
+            "/node_modules/",
+            "<rootDir>/dist/"
+        ],
         "globalSetup": "<rootDir>/scripts/jest-global-setup.js"
     }
 }
